-- Candidatures publiques aux stages
CREATE TABLE IF NOT EXISTS candidature (
    id BIGSERIAL PRIMARY KEY,
    nom VARCHAR(255) NOT NULL,
    prenom VARCHAR(255) NOT NULL,
    email VARCHAR(255) NOT NULL,
    telephone VARCHAR(255),
    filiere VARCHAR(255),
    niveau VARCHAR(255),
    etablissement VARCHAR(255),
    sujet_souhaite TEXT,
    departement_souhaite VARCHAR(255),
    message TEXT,
    statut VARCHAR(255) DEFAULT 'EN_ATTENTE',
    commentaire_rh TEXT,
    cv_contenu BYTEA,
    cv_nom_fichier VARCHAR(255),
    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    traite_at TIMESTAMP,
    traite_par VARCHAR(255),
    annonce_id BIGINT REFERENCES annonce_stage(id),
    score_matching INTEGER DEFAULT 0,
    competences_extraites TEXT,
    departement_id BIGINT REFERENCES departement(id),
    username VARCHAR(100),
    password_temp VARCHAR(100),
    date_meeting TIMESTAMP,
    statut_meeting VARCHAR(30) DEFAULT 'SANS_MEETING',
    note_encadrant TEXT,
    convocation_envoyee BOOLEAN DEFAULT FALSE,
    date_convocation TIMESTAMP,
    specialite VARCHAR(100),
    cv_chemin VARCHAR(500)
);
CREATE INDEX IF NOT EXISTS idx_candidature_departement ON candidature(departement_id);
